@@ -49,3 +49,104 @@ class AdminMenuTests(unittest.TestCase):
         admin_settings = self._callFUT(context, request)
 
         self.assertEqual(admin_settings['statistics_view_enabled'], True)
+
+
+class GlobalNavTests(unittest.TestCase):
+
+    def setUp(self):
+        testing.cleanUp()
+
+    def tearDown(self):
+        testing.cleanUp()
+
+    def _callFUT(self, context, request):
+        from karl.ux2.panels import global_nav
+        return global_nav(context, request)
+
+    def _make_layout(self, site, request):
+        layout = testing.DummyModel()
+        layout.site = site
+        layout.people_url = request.url + '/people'
+        layout.profiles_url = None
+        layout.should_show_calendar_tab = False
+        layout.user_is_staff = False
+        return layout
+
+    def test_communities_selected(self):
+        site = testing.DummyModel()
+        site['communities'] = communities = testing.DummyModel()
+        request = testing.DummyRequest()
+        request.layout_manager = testing.DummyModel()
+        request.url = request.url + '/communities'
+        request.layout_manager.layout = self._make_layout(site, request)
+        request.context = context = communities
+        global_nav = self._callFUT(context, request)
+
+        self.assertEqual(global_nav['nav_menu'][0]['id'], 'communities')
+        self.assertEqual(global_nav['nav_menu'][0]['selected'], 'selected')
+
+    def test_people_selected(self):
+        site = testing.DummyModel()
+        site['people'] = people = testing.DummyModel()
+        request = testing.DummyRequest()
+        request.layout_manager = testing.DummyModel()
+        request.layout_manager.layout = self._make_layout(site, request)
+        request.url = request.url + '/people'
+        request.context = context = people
+        global_nav = self._callFUT(context, request)
+
+        self.assertEqual(global_nav['nav_menu'][1]['id'], 'people')
+        self.assertEqual(global_nav['nav_menu'][1]['selected'], 'selected')
+
+    def test_feeds_selected(self):
+        site = testing.DummyModel()
+        request = testing.DummyRequest()
+        request.layout_manager = testing.DummyModel()
+        request.url = request.url + '/contentfeeds.html'
+        request.layout_manager.layout = self._make_layout(site, request)
+        request.context = context = site
+        global_nav = self._callFUT(context, request)
+
+        self.assertEqual(global_nav['nav_menu'][2]['id'], 'feeds')
+        self.assertEqual(global_nav['nav_menu'][2]['selected'], 'selected')
+
+    def test_calendar_selected(self):
+        site = testing.DummyModel()
+        site['offices'] = testing.DummyModel()
+        site['offices']['calendar'] = calendar = testing.DummyModel()
+        request = testing.DummyRequest()
+        request.layout_manager = testing.DummyModel()
+        request.url = request.url + '/offices/calendar'
+        request.layout_manager.layout = self._make_layout(site, request)
+        request.layout_manager.layout.should_show_calendar_tab = True
+        request.context = context = calendar
+        global_nav = self._callFUT(context, request)
+
+        self.assertEqual(global_nav['nav_menu'][3]['id'], 'calendar')
+        self.assertEqual(global_nav['nav_menu'][3]['selected'], 'selected')
+
+    def test_tags_selected(self):
+        site = testing.DummyModel()
+        request = testing.DummyRequest()
+        request.layout_manager = testing.DummyModel()
+        request.url = request.url + '/tagcloud.html'
+        request.layout_manager.layout = self._make_layout(site, request)
+        request.layout_manager.layout.user_is_staff = True
+        request.context = context = site
+        global_nav = self._callFUT(context, request)
+
+        self.assertEqual(global_nav['nav_menu'][3]['id'], 'tagcloud')
+        self.assertEqual(global_nav['nav_menu'][3]['selected'], 'selected')
+
+    def test_chatter_selected(self):
+        site = testing.DummyModel()
+        site['chatter'] = chatter = testing.DummyModel()
+        request = testing.DummyRequest()
+        request.layout_manager = testing.DummyModel()
+        request.url = request.url + '/chatter'
+        request.layout_manager.layout = self._make_layout(site, request)
+        request.context = context = chatter
+        global_nav = self._callFUT(context, request)
+
+        self.assertEqual(global_nav['nav_menu'][3]['id'], 'chatter')
+        self.assertEqual(global_nav['nav_menu'][3]['selected'], 'selected')
